--- a/tempopresente.html
+++ b/tempopresente.html
@@ -27,7 +27,7 @@
             tra psicoanalisi dei gruppi, istituzioni e mutamenti in corso.
           </p>
           <video controls preload="metadata">
-            <source src="https://pub-c1861b09248b42e89377a8c26093c548.r2.dev/Guelfo2025.mp4" type="video/mp4" />
+            <source src="https://youtu.be/RLQLAALVkvg?si=wFGG-h2m24ATww3M" type="video/mp4" />
             Il tuo browser non supporta il video HTML5.
           </video>
         </div>
