--- a/tempopresente.html
+++ b/tempopresente.html
@@ -14,34 +14,16 @@
     <div id="nav-placeholder"></div>
   </header>
 
-  <main>
-    <section class="ultime-section">
+  <main class="video-section">
+    <section>
       <h2>Ultimissime dalla rete</h2>
 
-      <div class="ultime-grid">
+      <div class="video-grid">
 
-        <div class="ultime-card">
-          <h3>Intervista a Guelfo</h3>
-          <p>
-            Un intervento che attraversa biografia, ricerca e visioni sul presente,
-            tra psicoanalisi dei gruppi, istituzioni e mutamenti in corso.
-          </p>
-          <video controls preload="metadata">
-            <source src="https://youtu.be/RLQLAALVkvg?si=wFGG-h2m24ATww3M" type="video/mp4" />
-            Il tuo browser non supporta il video HTML5.
-          </video>
-        </div>
-
-        <div class="ultime-card">
-          <h3>Linguaggi ancestrali in uso fra individui, tribù, istituzioni e lobbies</h3>
-          <p>
-            Una mappa dei linguaggi protomentali e ancestrali che attraversano persone,
-            gruppi e poteri collettivi, tra comunicazione esplicita e sottotraccia.
-          </p>
-          <video controls preload="metadata">
-            <source src="https://pub-c1861b09248b42e89377a8c26093c548.r2.dev/Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies ..mov" type="video/quicktime" />
-            Il tuo browser non supporta il video HTML5.
-          </video>
+        <!-- ✅ VIDEO 1 – YouTube embed -->
+        <div class="video-card">
+          <iframe src="https://www.youtube.com/embed/RLQLAALVkvg" allowfullscreen></iframe>
+          <p>Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies<p><b>IIPG Roma</b>
         </div>
 
       </div>
