--- a/tempofuturo.html
+++ b/tempofuturo.html
@@ -27,10 +27,24 @@
         class="locandina-card"
       >
         <div class="locandina-label">PDF</div>
-        <h3>Presentazione IIPG</h3>
+        <h3>Presentazione IIPG - COSÌ PARLÒ IL PROTOMENTALE</h3>
         <p>
           Locandina della presentazione del libro con IIPG. Informazioni su luogo,
           orari e ospiti.
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+      
+      <a
+        href="locandine/49154185PROGRAMMACONGRES.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+
+        <div class="locandina-label">PDF</div>
+        <h3>CONVEGNO IL PROFUMO DEI RICORDI IIPG</h3>
+        <p>
+          Informazioni su luogo, orari e ospiti.
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
