--- a/tempopresente.html
+++ b/tempopresente.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Margherita | Ultimissime dalla rete</title>
+  <title>Guelfo Margherita | In ultimissime dalla rete</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
 </head>
@@ -16,7 +16,7 @@
 
   <main class="video-section">
     <section>
-      <h2>Ultimissime dalla rete</h2>
+      <h2>In Ultimissime dalla rete</h2>
 
       <div class="video-grid">
 
