--- a/articoli.html
+++ b/articoli.html
@@ -6,6 +6,7 @@
   <title>Guelfo Marghetita | Leading Articles</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="leading-articles.css" />
+  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
   <header>
