--- a/foglivolanti.html
+++ b/foglivolanti.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guelfo Marghetita | Fogli volanti</title>
   <link rel="stylesheet" href="style.css" />
+  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
   <header>
