--- a/libri.html
+++ b/libri.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="libri.css" />
   <link rel="stylesheet" href="video.css" />
+  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
   <header>
