--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,27 @@
 <p>&copy; 2025 - Guelfo Margherita</p>
+
 <p>
-  <a href="mailto:guelfo.margherita@spiweb.it">guelfo.margherita@spiweb.it   
+  Sito personale di Guelfo Margherita – mail di contatto:
+  <a href="mailto:guelfo.margherita@spiweb.it" class="footer-link">
+    guelfo.margherita@spiweb.it
   </a>
-  <a href="https://www.iubenda.com/privacy-policy/45830204" class="iubenda-white iubenda-noiframe iubenda-embed" title="Privacy Policy">Privacy Policy</a>
+</p>
+
+<p class="footer-managed">
+  Sito gestito da Vittorio Lama – per eventuali segnalazioni:
+  <a href="mailto:lama.vittorio2005@gmail.com" class="footer-link">
+    lama.vittorio2005@gmail.com
+  </a>
+</p>
+
+<div class="footer-legal">
+  <a href="https://www.iubenda.com/privacy-policy/45830204"
+     class="footer-btn-legal iubenda-noiframe iubenda-embed"
+     title="Privacy Policy">
+    Privacy Policy
+  </a>
+</div>
+
 <script>
   (function (w,d) {
     var loader = function () {
@@ -15,4 +34,3 @@
     else{w.onload = loader;}
   })(window, document);
 </script>
-</p>
