--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Margherita</title>
+
+  <!-- SEO base -->
+  <title>Guelfo Margherita – Biografia ufficiale, opere e progetti</title>
+  <meta name="description" content="Biografia ufficiale di Guelfo Margherita, i suoi progetti, le opere, i libri, i film e le attività artistiche e didattiche. Sito ufficiale aggiornato." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/" />
+
+  <!-- Open Graph (per condivisione social) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita – Biografia ufficiale" />
+  <meta property="og:description" content="Sito ufficiale di Guelfo Margherita: biografia, opere, libri, film, progetti e attività." />
+  <meta property="og:url" content="https://guelfomargherita.com/" />
+  <meta property="og:image" content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita – Biografia ufficiale" />
+  <meta name="twitter:description" content="Biografia, opere, libri, film e progetti di Guelfo Margherita." />
+  <meta name="twitter:image" content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Dati strutturati Schema.org per persona -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Guelfo Margherita",
+    "url": "https://guelfomargherita.com/",
+    "description": "Biografia e attività ufficiali di Guelfo Margherita.",
+    "jobTitle": "Autore, formatore, ricercatore",
+    "image": "https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png",
+    "sameAs": []
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="my-favicon/favicon-96x96.png" />
+  <link rel="apple-touch-icon" href="my-favicon/apple-touch-icon.png" />
+
+  <!-- CSS e script esistenti -->
   <link rel="stylesheet" href="style.css" />
   <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
