--- a/brainstorming.html
+++ b/brainstorming.html
@@ -3,10 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Marghetita | brainstorming del tiramisu</title>
+
+  <title>Guelfo Margherita | Brainstorming del tiramisù</title>
+  <meta name="description"
+        content="Un laboratorio creativo di Guelfo Margherita: brainstorming del tiramisù, idee, metafore, processi narrativi e sperimentazioni concettuali." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/brainstorming.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Guelfo Margherita | Brainstorming del tiramisù" />
+  <meta property="og:description"
+        content="Un esercizio creativo e metaforico a cura di Guelfo Margherita: il brainstorming del tiramisù." />
+  <meta property="og:url" content="https://guelfomargherita.com/brainstorming.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | Brainstorming del tiramisù" />
+  <meta name="twitter:description"
+        content="Laboratorio creativo e narrativo ideato da Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "Brainstorming del tiramisù",
+    "author": "Guelfo Margherita",
+    "description": "Laboratorio creativo e metaforico ideato da Guelfo Margherita.",
+    "url": "https://guelfomargherita.com/brainstorming.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
 
