--- a/esp-tealtrali.html
+++ b/esp-tealtrali.html
@@ -3,10 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Marghetita | Esperienze Teatrali</title>
+
+  <title>Guelfo Margherita | Esperienze teatrali</title>
+  <meta name="description"
+        content="Le esperienze teatrali di Guelfo Margherita: pratiche di gruppo, performance, ricerche sul corpo, la scena e i processi collettivi." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/teatro.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita | Esperienze teatrali" />
+  <meta property="og:description"
+        content="Percorsi performativi e teatrali sviluppati da Guelfo Margherita." />
+  <meta property="og:url" content="https://guelfomargherita.com/teatro.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | Esperienze teatrali" />
+  <meta name="twitter:description"
+        content="Attività e ricerche teatrali di Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CreativeWork",
+    "name": "Esperienze teatrali di Guelfo Margherita",
+    "description": "Percorsi teatrali, performativi e di gruppo.",
+    "url": "https://guelfomargherita.com/teatro.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
 
