--- a/index.html
+++ b/index.html
@@ -5,45 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO base -->
-  <title>Guelfo Margherita – Biografia ufficiale</title>
-  <meta name="description" content="Biografia ufficiale di Guelfo Margherita, i suoi progetti, le opere, i libri, i film e le attività artistiche e didattiche. Sito ufficiale aggiornato." />
+  <title>Guelfo Margherita – Pagina Home</title>
+  <meta name="description"
+        content="Biografia ufficiale di Guelfo Margherita: opere, libri, attività di ricerca, progetti e contributi nel campo delle scienze umane e sociali. Sito ufficiale." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://guelfomargherita.com/" />
 
-  <!-- Open Graph (per condivisione social) -->
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Guelfo Margherita – Biografia ufficiale" />
-  <meta property="og:description" content="Sito ufficiale di Guelfo Margherita: biografia, opere, libri, film, progetti e attività." />
+  <meta property="og:description"
+        content="Sito ufficiale di Guelfo Margherita: biografia, opere, libri, progetti e attività." />
   <meta property="og:url" content="https://guelfomargherita.com/" />
-  <meta property="og:image" content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Guelfo Margherita – Biografia ufficiale" />
-  <meta name="twitter:description" content="Biografia, opere, libri, film e progetti di Guelfo Margherita." />
-  <meta name="twitter:image" content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+  <meta name="twitter:description"
+        content="Biografia, opere, libri, film e progetti di Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
 
-  <!-- Dati strutturati Schema.org per persona -->
+  <!-- Structured Data: Schema.org Person -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Guelfo Margherita",
     "url": "https://guelfomargherita.com/",
-    "description": "Biografia e attività ufficiali di Guelfo Margherita.",
+    "description": "Biografia ufficiale, opere, libri e attività professionali di Guelfo Margherita.",
     "jobTitle": "Autore, formatore, ricercatore",
     "image": "https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png",
-    "sameAs": []
+    "sameAs": [
+      "https://www.lafeltrinelli.it",
+      "https://www.amazon.it"
+    ]
   }
   </script>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="my-favicon/favicon-96x96.png" />
-  <link rel="apple-touch-icon" href="my-favicon/apple-touch-icon.png" />
+  <!-- Favicon (completa e compatibile con Google) -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
 
   <!-- CSS e script esistenti -->
   <link rel="stylesheet" href="style.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js">
+  </script>
 </head>
 
 <body>
