--- a/libri.html
+++ b/libri.html
@@ -3,11 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Marghetita | Books</title>
+
+  <!-- SEO -->
+  <title>Guelfo Margherita | Libri</title>
+  <meta name="description"
+        content="Libri di Guelfo Margherita: Così parlò il Protomentale, Il Grande Gruppo, Gaia e l’Homo Sapiens e molte altre opere, con schede, materiali e rimandi ai video." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/libri.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita | Libri" />
+  <meta property="og:description"
+        content="Scaffale delle opere di Guelfo Margherita: saggi, libri e materiali collegati." />
+  <meta property="og:url" content="https://guelfomargherita.com/libri.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | Libri" />
+  <meta name="twitter:description"
+        content="Tutti i libri e i saggi di Guelfo Margherita con schede, contenuti e materiali video." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org per pagina "Libri" -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Libri di Guelfo Margherita",
+    "description": "Scaffale completo delle opere e dei libri di Guelfo Margherita.",
+    "url": "https://guelfomargherita.com/libri.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="libri.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js">
+  </script>
 </head>
 <body>
   <header>
