--- a/tempofuturo.html
+++ b/tempofuturo.html
@@ -3,10 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Margherita | Ultimissime dalla rete</title>
+
+  <!-- SEO -->
+  <title>Guelfo Margherita | In ultimissime dalla rete</title>
+  <meta name="description"
+        content="Sezione In ultimissime dalla rete di Guelfo Margherita: video, conferenze e materiali di approfondimento collegati alle ultimissime dalla rete." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/video-conferenze.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita | In ultimissime dalla rete" />
+  <meta property="og:description"
+        content="Video e conferenze che approfondiscono i temi delle ultimissime dalla rete." />
+  <meta property="og:url" content="https://guelfomargherita.com/video-conferenze.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | In ultimissime dalla rete" />
+  <meta name="twitter:description"
+        content="Sezione di video e conferenze collegata alle Ultimissime dalla rete di Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "In ultimissime dalla rete",
+    "description": "Raccolta di video, conferenze e materiali collegati alle ultimissime dalla rete.",
+    "url": "https://guelfomargherita.com/video-conferenze.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js">
+  </script>
 </head>
 <body>
 
