--- a/film.html
+++ b/film.html
@@ -3,15 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guelfo Marghetita | Film</title>
+
+  <title>Guelfo Margherita | Film</title>
+  <meta name="description"
+        content="I film, i progetti audiovisivi e i materiali cinematografici curati o ispirati da Guelfo Margherita." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/film.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita | Film" />
+  <meta property="og:description"
+        content="Progetti filmici e materiali video di Guelfo Margherita." />
+  <meta property="og:url" content="https://guelfomargherita.com/film.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | Film" />
+  <meta name="twitter:description"
+        content="Sezione dedicata ai film e ai materiali audiovisivi collegati al lavoro di Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoGallery",
+    "name": "Film di Guelfo Margherita",
+    "description": "Film e materiali audiovisivi collegati alle ricerche e ai progetti di Guelfo Margherita.",
+    "url": "https://guelfomargherita.com/film.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
 
   <header>
-    <h1>Film</h1>
+    <h1>Guelfo Margherita | Film</h1>
     <div id="nav-placeholder"></div>
   </header>
   <!-- ====== film ====== -->
