--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -3,10 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Guelfo Margherita | Grandi gruppi residenziali</title>
+  <meta name="description"
+        content="Il lavoro di Guelfo Margherita sui grandi gruppi residenziali: processi comunitari, dinamiche psicosociali, ricerca sul campo e materiali di approfondimento." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://guelfomargherita.com/grandi-gruppi.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Guelfo Margherita | Grandi gruppi residenziali" />
+  <meta property="og:description"
+        content="Approfondimenti sui grandi gruppi residenziali guidati da Guelfo Margherita." />
+  <meta property="og:url" content="https://guelfomargherita.com/grandi-gruppi.html" />
+  <meta property="og:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Guelfo Margherita | Grandi gruppi residenziali" />
+  <meta name="twitter:description"
+        content="Materiali e ricerche sui grandi gruppi residenziali condotti da Guelfo Margherita." />
+  <meta name="twitter:image"
+        content="https://guelfomargherita.com/Immagini/ritratto-guelfo-miniatura.png" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "name": "Grandi gruppi residenziali",
+    "author": "Guelfo Margherita",
+    "description": "Ricerche, pratiche e materiali sui grandi gruppi residenziali.",
+    "url": "https://guelfomargherita.com/grandi-gruppi.html"
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/my-favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/my-favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="video.css" />
-  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
+
+  <!-- Iubenda -->
+  <script type="text/javascript"
+          src="https://embeds.iubenda.com/widgets/97ae260a-5698-44c5-9218-8c8b355921f6.js"></script>
 </head>
 <body>
 
