sab 15 nov seconda

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 <body>
   <header>
     <h1>Guelfo Margherita – Pagina Home</h1>
+    <p class="intro-home">
+      Sito ufficiale di Guelfo Margherita: biografia, opere, libri, grandi gruppi,
+      ricerche e progetti nell’ambito della psicoanalisi di gruppo e delle istituzioni.
+    </p>
     <div id="nav-placeholder"></div>
   </header>
 
