--- a/tempopresente.html
+++ b/tempopresente.html
@@ -59,7 +59,7 @@
 <body>
 
   <header>
-    <h1>Tempo Presente</h1>
+    <h1>Guelfo Margherita – Tempo Presente</h1>
     <div id="nav-placeholder"></div>
   </header>
 
