--- a/esp-tealtrali.html
+++ b/esp-tealtrali.html
@@ -57,7 +57,7 @@
 <body>
 
   <header>
-    <h1>Esperienze Teatrali</h1>
+    <h1>Guelfo Margherita – Esperienze Teatrali</h1>
     <div id="nav-placeholder"></div>
   </header>
   <!-- ====== teatro ====== -->
