--- a/tempofuturo.html
+++ b/tempofuturo.html
@@ -59,7 +59,7 @@
 <body>
 
   <header>
-    <h1>Tempo Futuro</h1>
+    <h1>Guelfo Margherita – Tempo Futuro</h1>
     <div id="nav-placeholder"></div>
   </header>
 
