--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         Aggiunse mio padre: per ricordarti chi sei e farti riconoscere dal contesto che esplori, canta talvolta l’aria di Mimì dalla “Boheme” oppure la serenata di Lindoro da “Il Barbiere”. 
         Così alcuni punti di vista del cervello di Guelfo lo iniziarono a esplorare come contesto per capire in quali condizioni loro vi si erano formati dentro: come parole crociate spuntate <i>un po’ per celia </i>(spasso) <i>un po’ per non morire</i> di inedia. 
       </p>
-      <h3>indice delle carte:</h3>
+      <h3>carte nautiche: indice </h3>
 
       
     </section>
