--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -58,7 +58,7 @@
 <body>
 
   <header>
-    <h1>Grandi gruppi residenziali</h1>
+    <h1>Guelfo Margherita – Grandi gruppi residenziali</h1>
     <div id="nav-placeholder"></div>
   </header>
 
@@ -75,30 +75,16 @@
     <div class="locandine-grid">
 
       <!-- riusa file reali che hai indicato -->
+    
       <a
         href="locandine/DOC-20241010-WA0027..pdf"
         target="_blank"
         class="locandina-card"
       >
         <div class="locandina-label">PDF</div>
-        <h3>Presentazione IIPG</h3>
+        <h3>LINGUAGGI, IDENTITÁ E GRUPPO</h3>
         <p>
-          Materiale sull’intervento dedicato ai grandi gruppi residenziali
-          in collaborazione con IIPG.
-        </p>
-        <span class="locandina-cta">Apri locandina</span>
-      </a>
-
-      <a
-        href="locandine/DOC-20241010-WA0027..pdf"
-        target="_blank"
-        class="locandina-card"
-      >
-        <div class="locandina-label">PDF</div>
-        <h3>Università Benevento</h3>
-        <p>
-          Incontro universitario sui dispositivi gruppali e le dinamiche
-          istituzionali.
+          18 OTTOBRE 2024 UNIVERSITÀ DEGLI STUDI DEL SANNIO BENEVENTO
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
@@ -111,20 +97,7 @@
         <div class="locandina-label">PDF</div>
         <h3>Giornata Caprese</h3>
         <p>
-          Programma della giornata di lavoro e riflessione in assetto residenziale.
-        </p>
-        <span class="locandina-cta">Apri locandina</span>
-      </a>
-
-      <a
-        href="locandine/BRO ITA ultima.pdf"
-        target="_blank"
-        class="locandina-card"
-      >
-        <div class="locandina-label">PDF</div>
-        <h3>Ischia</h3>
-        <p>
-          Brochure dell’esperienza residenziale a Ischia tra clinica, paesaggio e gruppi.
+          21 OTTOBRE 2023
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
@@ -137,7 +110,33 @@
         <div class="locandina-label">IMG</div>
         <h3>Happening culturale</h3>
         <p>
-          Locandina in formato immagine per l’happening culturale del 14 novembre.
+          17 ,18 DICEMBRE 2022 BENEVENTO
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+
+      <a
+        href="locandine/BRO ITA ultima.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <div class="locandina-label">PDF</div>
+        <h3>Giornate Scientifiche</h3>
+        <p>
+          4 ,5 MAGGIO 2018 ISCHIA
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+
+      <a
+        href="locandine/Esplorare i sogni - IIPG.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <div class="locandina-label">PDF</div>
+        <h3>Esplorare i sogni in cui il gruppo trasforma la realtà.</h3>
+        <p>
+        14, 15, 16 DICEMBRE 2018 NAPOLI
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
