--- a/navbar.html
+++ b/navbar.html
@@ -46,7 +46,7 @@
       <button class="top-link" aria-expanded="false" aria-controls="submenu-3">Guelfo Margherita</button>
       <div id="submenu-3" class="submenu">
         <ul>
-          <li><a href="index.html#lecarteindice">Le carte: indice</a></li>
+          <li><a href="index.html#lecarteindice">carte nautiche: indice</a></li>
           <li><a href="tempopresente.html">Tempo Presente: ultimissime dalla rete</a></li> 
           <li><a href="tempofuturo.html">Tempo futuro: prossimi appuntamenti ( locandine e materiali )</a></li>
         </ul>
