--- a/tempopresente.html
+++ b/tempopresente.html
@@ -76,6 +76,24 @@
         </div>
 
       </div>
+      <div class="locandine-grid">
+
+      <!-- Card locandina 1 -->
+      <a
+        href="locandine/dEF_2locandina_libro_margherita (3).pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <div class="locandina-label">PDF</div>
+        <h3>Presentazione IIPG - COSÌ PARLÒ IL PROTOMENTALE</h3>
+        <p>
+          Locandina della presentazione del libro con IIPG. Informazioni su luogo,
+          orari e ospiti.
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+
+    </div>
     </section>
   </main>
 
