--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -110,7 +110,8 @@
         <div class="locandina-label">IMG</div>
         <h3>Happening culturale</h3>
         <p>
-          17 ,18 DICEMBRE 2022 BENEVENTO
+          17 ,18 DICEMBRE 2022 - Teatro Mulino Pacifico - SOLOT
+via Appio Claudio, 17 Benevento
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
@@ -123,7 +124,9 @@
         <div class="locandina-label">PDF</div>
         <h3>Giornate Scientifiche</h3>
         <p>
-          4 ,5 MAGGIO 2018 ISCHIA
+          4 ,5 MAGGIO 2018 - La Colombaia
+Fondazione Villa Visconti
+Forio d’Ischia (NA)
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
@@ -136,7 +139,21 @@
         <div class="locandina-label">PDF</div>
         <h3>Esplorare i sogni in cui il gruppo trasforma la realtà.</h3>
         <p>
-        14, 15, 16 DICEMBRE 2018 NAPOLI
+        14, 15, 16 DICEMBRE 2018 - I.S.I.S. “A. Casanova” Piazzetta Casanova, 4
+(Via San Sebastiano) Napoli
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+
+      <a
+        href="locandine/la-citta-psicotica-brochure-it-bozza5bis.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <div class="locandina-label">PDF</div>
+        <h3>La città psicotica</h3>
+        <p>  10, 11, 12 OTTOBRE 2014 - Palazzo Zapata Piazza Trieste e Trento, 48 Napoli 
+        
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
