--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -152,7 +152,8 @@ Forio d’Ischia (NA)
       >
         <div class="locandina-label">PDF</div>
         <h3>La città psicotica</h3>
-        <p>  10, 11, 12 OTTOBRE 2014 - Palazzo Zapata Piazza Trieste e Trento, 48 Napoli 
+        <p>  10, 11, 12 OTTOBRE 2014 - Palazzo Zapata Piazza Trieste e Trento, 
+          48 Napoli 
         
         </p>
         <span class="locandina-cta">Apri locandina</span>
