--- a/tempopresente.html
+++ b/tempopresente.html
@@ -67,18 +67,25 @@
     <section>
       <h2>In Ultimissime dalla rete</h2>
 
-      <div class="video-grid">
-
-        <!-- ✅ VIDEO 1 – YouTube embed -->
-        <div class="video-card">
-          <iframe src="https://www.youtube.com/embed/RLQLAALVkvg" allowfullscreen></iframe>
-          <p>Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies<p><b>IIPG Roma</b>
-        </div>
-
-      </div>
       <div class="locandine-grid">
 
-      <!-- Card locandina 1 -->
+        <!-- Card locandina 1 -->
+      <a
+        href="locandine/49154185PROGRAMMACONGRES.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <div class="locandina-label">PDF</div>
+        <h3>CONVEGNO IL PROFUMO DEI RICORDI IIPG</h3>
+        <p>
+          21-22 NOVEMBRE 2025
+TEATRO TITANO - REPUBBLICA SAN MARINO
+Piazza Sant’Agata, 5 - Città di San Marino 
+        </p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
+
+         <!-- Card locandina 1 -->
       <a
         href="locandine/dEF_2locandina_libro_margherita (3).pdf"
         target="_blank"
@@ -92,8 +99,16 @@
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
-
     </div>
+
+      <div class="video-grid">
+        <!-- ✅ VIDEO 1 – YouTube embed -->
+        <div class="video-card">
+          <iframe src="https://www.youtube.com/embed/RLQLAALVkvg" allowfullscreen></iframe>
+          <p>Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies<p><b>IIPG Roma</b>
+        </div>
+      </div>
+      
     </section>
   </main>
 
