--- a/tempopresente.html
+++ b/tempopresente.html
@@ -75,13 +75,8 @@
         target="_blank"
         class="locandina-card"
       >
-        <div class="locandina-label">PDF</div>
-        <h3>CONVEGNO IL PROFUMO DEI RICORDI IIPG</h3>
-        <p>
-          21-22 NOVEMBRE 2025
-TEATRO TITANO - REPUBBLICA SAN MARINO
-Piazza Sant’Agata, 5 - Città di San Marino 
-        </p>
+        <h3>Convegno il profumo dei ricordi</h3>
+        <p>21-22 NOVEMBRE 2025 - TEATRO TITANO - REPUBBLICA SAN MARINO - Piazza Sant’Agata, 5 - Città di San Marino</p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
 
@@ -91,11 +86,9 @@ Piazza Sant’Agata, 5 - Città di San Marino
         target="_blank"
         class="locandina-card"
       >
-        <div class="locandina-label">PDF</div>
-        <h3>Presentazione IIPG - COSÌ PARLÒ IL PROTOMENTALE</h3>
+        <h3>Presentazione libro</h3>
         <p>
-          Locandina della presentazione del libro con IIPG. Informazioni su luogo,
-          orari e ospiti.
+          13 NOVEMBRE 2025 - IIPG - MILANO
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
