--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -92,7 +92,7 @@
       >
         <h3>21 OTTOBRE 2023</h3>
         <p>
-         Giornata Caprese
+         Giornate Caprese
         </p>
       </a>
 
