--- a/tempopresente.html
+++ b/tempopresente.html
@@ -69,7 +69,7 @@
 
       <div class="locandine-grid">
 
-        <!-- Card locandina 1 -->
+        <!-- Card locandina -->
       <a
         href="locandine/49154185PROGRAMMACONGRES.pdf"
         target="_blank"
@@ -80,7 +80,7 @@
         <span class="locandina-cta">Apri locandina</span>
       </a>
 
-         <!-- Card locandina 1 -->
+         <!-- Card locandina -->
       <a
         href="locandine/dEF_2locandina_libro_margherita (3).pdf"
         target="_blank"
@@ -94,13 +94,30 @@
       </a>
     </div>
 
-      <div class="video-grid">
-        <!-- ✅ VIDEO 1 – YouTube embed -->
-        <div class="video-card">
-          <iframe src="https://www.youtube.com/embed/RLQLAALVkvg" allowfullscreen></iframe>
-          <p>Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies<p><b>IIPG Roma</b>
-        </div>
+    <div class="video-grid">
+      <div class="video-card">
+        <iframe
+          src="https://www.youtube.com/embed/RLQLAALVkvg"
+          title="Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies – IIPG Roma"
+          loading="lazy"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+        </iframe>
+        <p>
+          Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies<br>
+          <b>IIPG Roma</b>
+        </p>
+        <p>
+          Guarda il video su YouTube:
+          <a href="https://www.youtube.com/watch?v=RLQLAALVkvg&t=2s"
+            target="_blank" rel="noopener">
+            Linguaggi ancestrali in uso fra individui, tribù, istituzioni e magari lobbies
+          </a>
+        </p>
       </div>
+    </div>
+
+    
       
     </section>
   </main>
