update sito: pagine + immagini

--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
         </div>
       </div>
 
+      <!-- 8.5) supervisione di gruppo -->
+      <div class="idee-card" onclick="expandCard(this)">
+        <h3>La supervisione di gruppo</h3>
+        <img src="Immagini/IMG_1157.jpg" alt="Occhio della mosca">
+        <div class="idee-content">
+          <p>pagina in allestimento</p>
+        </div>
+      </div>
+
       <!-- 9) Genius Loci -->
       <div class="idee-card" onclick="expandCard(this)">
         <h3>Genius Loci</h3>
