--- a/tempopresente.html
+++ b/tempopresente.html
@@ -92,6 +92,17 @@
         </p>
         <span class="locandina-cta">Apri locandina</span>
       </a>
+
+      <!-- Card locandina -->
+      <a
+        href="locandine/Locandina_Confini_FinaleOK.pdf"
+        target="_blank"
+        class="locandina-card"
+      >
+        <h3>CONFINI - Sabato 6 dicembre 2025</h3>
+        <p>Roma, Via Panama 48</p>
+        <span class="locandina-cta">Apri locandina</span>
+      </a>
     </div>
 
     <div class="video-grid">
