--- a/chi-foresta.html
+++ b/chi-foresta.html
@@ -8,15 +8,12 @@
   <link rel="stylesheet" href="foresta.css" />
 </head>
 <body>
-  <header style="padding: 1rem;">
-    <button onclick="history.back()" style="padding: 0.5rem 1rem; font-size: 1.2rem; background-color: #4e7031; color: white; border: none; border-radius: 8px; cursor: pointer;">
-       Torna Indietro
-    </button>
-    <button onclick="window.location.href='index.html'" style="padding: 0.5rem 1rem; font-size: 1.2rem; background-color: #315e70; color: white; border: none; border-radius: 8px; cursor: pointer;">
-       Home
-    </button>
-    <b>pagina in allestimento</b>
-    
+
+  <header class="foresta-topbar">
+    <button class="foresta-btn foresta-btn--green" onclick="history.back()">Torna Indietro</button>
+    <button class="foresta-btn foresta-btn--blue" onclick="window.location.href='index.html'">Home</button>
+
+    <div class="foresta-status" id="foresta-status"></div>
   </header>
 
   <main>
@@ -24,13 +21,11 @@
   </main>
 
   <footer id="footer-placeholder"></footer>
-<script>
-  fetch('footer.html')
-    .then(res => res.text())
-    .then(data => {
-      document.getElementById('footer-placeholder').innerHTML = data;
-    });
-</script>
+  <script>
+    fetch('footer.html')
+      .then(res => res.text())
+      .then(data => { document.getElementById('footer-placeholder').innerHTML = data; });
+  </script>
 
   <script src="foresta.js"></script>
 </body>
