--- a/articoli.html
+++ b/articoli.html
@@ -21,8 +21,8 @@
     <div class="articles-grid">
       
       <div class="article-card main-card" onclick="toggleArticle(this)">
-        <img src="Immagini/1-Nataraja-Statue-Without-Arch.jpg" alt="Intervento al 9th International Bion Conference" />
-        <h3>"Psychic vitality and basic assumption", 9th International Bion Conference: Milan, 2016 “Emotions, Transformation and Psychic Vitality” University of Milan, Septemer 30th – October 01st/02nd 2016)</h3>
+        <img src="Immagini/E226B1D4-91AF-4975-949D-A399282DBF21.png" alt="Intervento al 9th International Bion Conference" />
+        <!-- <h3>"Psychic vitality and basic assumption", 9th International Bion Conference: Milan, 2016 “Emotions, Transformation and Psychic Vitality” University of Milan, Septemer 30th – October 01st/02nd 2016)</h3> -->
 
         <div class="article-content">
           <p><strong>VITALITÀ PSICHICA ED ASSUNTI DI BASE</strong></p>
@@ -76,13 +76,16 @@
       </div>
    
       <div class="article-card" onclick="toggleArticle(this)">
-        <img src="Immagini/atmosfera.jpg" alt="Proto-mentale e Genius Loci" />
-        <h3>
+        <img src="Immagini/598D5577-20A3-42DA-A207-DB6185F569CA.png" alt="Proto-mentale e Genius Loci" />
+        <!-- <h3>
           "Proto-mentale e Genius Loci: Psicosomatica di Napoli tra fuochi, veleni e scosse", 
           letto al: Workshop transculturale e transdisciplinare: “La Città Psicotica”, EATGA, Napoli, 2014
-        </h3>
+        </h3> -->
 
         <div class="article-content">
+          <b>PROTO-MENTALE E GENIUS LOCI:</b> <br>
+          <b>Psicosomatica di Napoli tra fuochi, veleni e scosse</b> <br>
+          <b>Letto al: Workshop transculturale e transdisciplinare: “La Città Psicotica”, EATGA, Napoli, 2014</b> 
           <p>Provo a mitigare il titolo di un workshop che mi è sembrato fin dall'inizio provocatoriamente parziale e violento, seppur in fondo vero.</p>
           <p>Se colloco in un punto reale la "Città Psicotica", al suo Zenit, magari lungo l’asse del desiderio che la trasporta fin dentro il mio cervello, incontro necessariamente la sua controparte complementare ed inscindibile, cioè il suo modello idealizzato: la "Città del Sole". Non quella ovvia e kitsch di mare, clima e canzoni, ma quella contenuta, per esempio, nell'Utopia Immaginaria di un nostro conterraneo del vicereame di Napoli di quattrocento anni fa: Tommaso Campanella (1568 - 1639)(1), imprigionato nelle segrete del Maschio Angioino dall'Inquisizione. Triste destino che, come Bion ci insegna, qualunque establishment più o meno riserva ai suoi visionari anticipatori di scomode verità.</p>
           <p>È di questo tipo di spazio, quello mentale, fantastico, utopico (allargandolo magari dal cervello di Campanella a quello del nostro gruppo al lavoro a cento metri dalla sua prigione) che provo a parlare, collocandovi e collegandovi il materiale che in genere studio: brandelli associativi, spezzoni di idee, di storie, di emozioni, residui sensoriali o di sogni, aggregati, organi ipocondriaci, magari trasportati dalle oscillazioni emotive che scorrono nella relazione tra uno Zenit ed un Nadir; tra una Città psicotica e una Città del sole; cioè tra la dolorosa esperienza di una pratica quotidiana ed una impossibile utopia.</p>
@@ -395,10 +398,10 @@
        -->
 
       <div class="article-card" onclick="toggleArticle(this)">
-        <img src="Immagini/747EA3B8-5876-4E66-9FB7-66A004054C92.png" alt="Proto-mentale e Genius Loci" />
-        <h3>
+        <img src="Immagini/0E81920D-B14E-49E8-8376-8F20BE630319.png" alt="Proto-mentale e Genius Loci" />
+        <!-- <h3>
           CHI? COSA? COME? QUANDO? DOVE? PERCHÉ?
-        </h3>
+        </h3> -->
 
         <div class="article-content">
           <p>
