--- a/film.html
+++ b/film.html
@@ -77,8 +77,6 @@
               Regia di nina di majo
               Genere Commedia – Italia, 1999 – durata 95 minuti.   
             </p>
-            <a href="https://www.mymovies.it/film/1999/autunno/" target="_blank" class="film-button">Scopri di più</a>
-            <a href="https://share.google/mHdBksVKwUuQDisH2" target="_blank" class="film-button">Wikipedia</a>
           </div>
         </div>
 
@@ -91,12 +89,12 @@
             <h3>Dadapolis (2024)</h3>
             <p>
               Regia di Carlo Luglio, Fabio Gargano.  
-              Con Viviana Cangiano, Cristina Donadio, Peppe Lanzetta, Lino Musella, Dario Sansone.  
+              Con Guelfo Margherita, Viviana Cangiano, Cristina Donadio, Peppe Lanzetta, Lino Musella, Dario Sansone.  
               Genere: Documentario – Italia, 2024 – Durata: 72 minuti.  
               Distribuzione: Europictures.  
               Uscita cinema: 2 dicembre 2024.  
             </p>
-            <a href="https://www.mymovies.it/film/2024/dadapolis-caleidoscopio-napoletano/" target="_blank" class="film-button">Scopri di più</a>
+            <a href="https://www.youtube.com/watch?v=xpNrToTllx4&t=4s" target="_blank" class="film-button">Guarda trailer</a>
           </div>
         </div>
       </div>
