--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
 </p>
 
 <p class="footer-managed">
-  Sito gestito da Vittorio Lama – per eventuali segnalazioni:
+  Sito creato e gestito da Vittorio Lama – per eventuali segnalazioni:
   <a href="mailto:lama.vittorio2005@gmail.com" class="footer-link">
     lama.vittorio2005@gmail.com
   </a>
