--- a/film.html
+++ b/film.html
@@ -68,7 +68,7 @@
         <!--BLOCCO FILM  -->
         <div class="film-card">
            <h3>
-            Guelfo ha inoltre interpretato la parte dello psicoanalista nel film di Nina di majo Autunno edito dalla Sacher film di Nanni Moretti nel 1999
+            Guelfo ha interpretato la parte dello psicoanalista nel film di Nina di majo Autunno edito dalla Sacher film di Nanni Moretti nel 1999
            </h3>
           <img src="Immagini/autunno-84-1383737073.jpg" alt="Locandina Dadapolis" class="film-poster">
           <div class="film-info">
@@ -89,12 +89,14 @@
             <h3>Dadapolis (2024)</h3>
             <p>
               Regia di Carlo Luglio, Fabio Gargano.  
-              Con Guelfo Margherita, Viviana Cangiano, Cristina Donadio, Peppe Lanzetta, Lino Musella, Dario Sansone.  
+              Con Viviana Cangiano, Cristina Donadio, Peppe Lanzetta, Guelfo Margherita, Lino Musella, Dario Sansone.  
               Genere: Documentario – Italia, 2024 – Durata: 72 minuti.  
               Distribuzione: Europictures.  
               Uscita cinema: 2 dicembre 2024.  
             </p>
             <a href="https://www.youtube.com/watch?v=xpNrToTllx4&t=4s" target="_blank" class="film-button">Guarda trailer</a>
+            <p>Chi fosse interessato alla visione del film può contattare i registi Carlo Luglio e Fabio Gargano per ricever il link della visione del film : </p>
+            <a href="mailto:cluglio@gmail.com" class="film-button">cluglio@gmail.com</a>
           </div>
         </div>
       </div>
