--- a/index.html
+++ b/index.html
@@ -608,21 +608,21 @@
         <p>
         Immaginiamo che Dio giochi a dadi con l’universo e che i numeri pari dei due dadi segnino l’uguaglianza e il dispari  la loro diversità come nei cromosomi x e y. <br>
 
-        (giuanji) si svolge in campi diversi collocati in universi diversi e a tiri diversi corrispondano percorsi di trasformazione in questi l’universo a fuoco si trasforma in una nuova entità emergente.
+        (giuanji) si svolge in campi diversi collocati in universi diversi e a tiri diversi corrispondano percorsi di trasformazione. in questi l’universo a fuoco si trasforma in una nuova entità emergente. <br>
 
-        Il chi rappresenta il soggetto e l’oggetto del discorso che costruisce il gioco. <br>
-        scelgo tre universi concentrici in cui i chi sono sia contenitori che contenuti, intercambiabili tra loro per i tiri di dadi che dio fa per prendere in giro Enstein. <br>
+        "Il chi" rappresenta il soggetto e l’oggetto del discorso che costruisce il gioco. <br>
+        scelgo tre universi concentrici in cui i chi sono sia contenitori che contenuti, intercambiabili tra loro per i tiri di dadi che dio fa per prendere in giro Einstein. <br>
 
         Il lancio dei dadi contiene la materia energia per la dinamica della trasformazione. <br>
 
-        Scelgo tre livelli di questa serie che potrebbero essere il chi della foresta, 
-        Il chi della tribù, il chi del mistero. <br>
+        Scelgo tre livelli di questa serie che potrebbero essere "il chi" della foresta, 
+        "Il chi" della tribù, "Il chi" del mistero. <br>
 
         In quanto i piu vicini all universo di cui la nostra disciplina si occupa. <br>
 
-        Il fenomeno emergente nelle tre condizioni potrebbe essere la vita per il chi della foresta il corpo per il chi della tribù il sogno per il chi del mistero. <br>
+        Il fenomeno emergente nelle tre condizioni potrebbe essere la vita per "il chi" della foresta il corpo per "il chi" della tribù il sogno per "il chi" del mistero. <br>
 
-        Il chi del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito.
+        "Il chi" del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito.
       </p>
         <button onclick="location.href='chi.html'">Chi? (Foresta)</button>
         <button onclick="location.href='chi.html'">Chi? (Tribù)</button>
