--- a/index.html
+++ b/index.html
@@ -616,11 +616,10 @@
         Il lancio dei dadi contiene la materia energia per la dinamica della trasformazione. <br>
 
         Scelgo tre livelli di questa serie che potrebbero essere "il chi" della foresta, 
-        "Il chi" della tribù, "Il chi" del mistero. <br>
+        "Il chi" della tribù, "Il chi" del mistero, in quanto i piu vicini all'universo di cui la nostra disciplina si occupa. <br>
 
-        In quanto i piu vicini all universo di cui la nostra disciplina si occupa. <br>
-
-        Il fenomeno emergente nelle tre condizioni potrebbe essere la vita per "il chi" della foresta il corpo per "il chi" della tribù il sogno per "il chi" del mistero. <br>
+        Il fenomeno emergente nelle tre condizioni potrebbe essere "la Vita" per il chi ella foresta "il Corpo" per il chi della tribù. <br>
+        "il Sogno" per il chi del mistero. <br>
 
         "Il chi" del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito.
       </p>
