--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         Il fenomeno emergente nelle tre condizioni potrebbe essere "la Vita" per il chi ella foresta "il Corpo" per il chi della tribù. <br>
         "il Sogno" per il chi del mistero. <br>
 
-        "Il chi" del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito.
+        "Il chi" del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito seriale.
       </p>
         <button onclick="location.href='chi.html'">Chi? (Foresta)</button>
         <button onclick="location.href='chi.html'">Chi? (Tribù)</button>
