--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         <p>
         Immaginiamo che Dio giochi a dadi con l’universo e che i numeri pari dei due dadi segnino l’uguaglianza e il dispari  la loro diversità come nei cromosomi x e y. <br>
 
-        (giuanji) si svolge in campi diversi collocati in universi diversi e a tiri diversi corrispondano percorsi di trasformazione. in questi l’universo a fuoco si trasforma in una nuova entità emergente. <br>
+        (Jumanji) si svolge in campi diversi collocati in universi diversi e a tiri diversi corrispondano percorsi di trasformazione. in questi l’universo a fuoco si trasforma in una nuova entità emergente. <br>
 
         "Il chi" rappresenta il soggetto e l’oggetto del discorso che costruisce il gioco. <br>
         scelgo tre universi concentrici in cui i chi sono sia contenitori che contenuti, intercambiabili tra loro per i tiri di dadi che dio fa per prendere in giro Einstein. <br>
